...
                        <viewLayoutGuide key="safeArea" id="Rf9-Sj-GRF"/>
                    </view>
                    <navigationItem key="navigationItem" title="Swift Radio" id="OKR-cw-CyI">
                        <barButtonItem key="leftBarButtonItem" title="icon hamburger" image="icon-hamburger" id="CEi-nw-1dN">
                            <connections>
                                <segue destination="61j-j7-6ve" kind="modal" identifier="ShowMenu" id="MJP-ZO-92b"/>
...
                                        <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                        <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <state key="normal" title="About">
                                            <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="k7t-tN-2wp" userLabel="PauseButton">
                                        <rect key="frame" x="57" y="0.0" width="45" height="45"/>
                                        <accessibility key="accessibilityConfiguration" identifier="btn pause"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="45" id="0QP-4Y-L0R"/>
...
                                    <constraint firstAttribute="height" constant="36" id="m1i-gc-0rZ"/>
                                </constraints>
                                <state key="normal" image="logo">
                                    <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Login" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lUq-Kr-lnL" userLabel="labelLogin">
                                <rect key="frame" x="16" y="86" width="42" height="21"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GSt-CS-BbI" userLabel="labelPassword">
                                <rect key="frame" x="16" y="139" width="74" height="21"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                <rect key="frame" x="148" y="617" width="79" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Connection"/>
                                <connections>
                                    <action selector="actionSurBtnConnection:" destination="qct-tm-5Fs" eventType="touchUpInside" id="Olo-9F-7wp"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                <state key="normal" title="Okay">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <state key="normal" title="matthewfecher.com">
                                                    <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                </state>
...
                                                <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <state key="normal" title="email me">
                                                    <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                </state>
...
